--- a/BasicVue/index.html
+++ b/BasicVue/index.html
@@ -6,6 +6,9 @@
     
     <div id="root">
       <li v-for="name in names" v-text="name"></li>
+
+      <input type="text" v-model="newName">
+      <button v-on:click="addName">Add Name</button>
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -13,9 +16,19 @@
 
       var app = new Vue({
         el: '#root',
+
         data: {
-          names: ['Joe', 'Mary', 'Jane'],
+            newName: '',
+            names: ['Joe', 'Mary', 'Jane'],
         },
+
+        methods: {
+            addName() {
+                this.names.push(this.newName);
+                this.newName = '';
+            }
+        }
+
       });
 
     </script>
